--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@jitsi/react-sdk": "^1.4.0",
+    "bcryptjs": "^3.0.3",
     "date-fns": "^3.0.6",
     "firebase": "^10.7.1",
     "lucide-react": "^0.300.0",
