fix: corrige loop de redirecionamento no logout destruindo sessão no servidor

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@jitsi/react-sdk": "^1.4.0",
     "bcryptjs": "^3.0.3",
     "date-fns": "^3.0.6",
+    "dotenv": "^17.2.3",
     "firebase": "^10.7.1",
     "lucide-react": "^0.300.0",
     "next": "14.0.4",
