--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "franca-office",
-  "version": "2.0.0",
-  "description": "Escritório Virtual da Franca - Sistema de videoconferência com Jitsi Meet",
+  "version": "3.0.1",
+  "description": "Escritório Virtual da Franca - Sistema de videoconferência com Jitsi Meet e Login Google",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,12 +11,10 @@
   },
   "dependencies": {
     "@jitsi/react-sdk": "^1.4.0",
-    "bcryptjs": "^3.0.3",
     "date-fns": "^3.0.6",
-    "dotenv": "^17.2.3",
-    "firebase": "^10.7.1",
+    "firebase": "^10.14.1",
     "lucide-react": "^0.300.0",
-    "next": "14.0.4",
+    "next": "14.2.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zustand": "^4.4.7"
@@ -27,7 +25,7 @@
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.2.15",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
